--- a/ansible.yml
+++ b/ansible.yml
@@ -11,13 +11,17 @@
     - name: Cycle bash completion with TAB
       blockinfile:
         block: |
-          TAB: menu-complete
-          "\e[Z": menu-complete-backward
           set editing-mode vi
+
           set keymap vi-command
           "\C-l": clear-screen
+
           set keymap vi-insert
           "\C-l": clear-screen
+          TAB: menu-complete
+          "\e[Z": menu-complete-backward
+          set show-all-if-ambiguous on
+          set menu-complete-display-prefix on
         dest: ~/.inputrc
         create: true
 
